--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 asgiref==3.8.1
 crispy-bootstrap4==2024.1
+dj-database-url==2.2.0
 Django==5.1.1
 django-crispy-forms==2.3
+export==0.2.1
 flake8==7.1.1
 mccabe==0.7.0
 numpy==2.1.1
 packaging==24.1
 pandas==2.2.3
 plotly==5.24.1
+psycopg2==2.9.9
 pycodestyle==2.12.1
 pyflakes==3.2.0
 python-dateutil==2.9.0.post0
@@ -15,4 +18,6 @@ pytz==2024.2
 six==1.16.0
 sqlparse==0.5.1
 tenacity==9.0.0
+typing_extensions==4.12.2
 tzdata==2024.1
+whitenoise==6.7.0
