--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.8.1
+click==8.1.7
+colorama==0.4.6
 crispy-bootstrap4==2024.1
 dj-database-url==2.2.0
 Django==5.1.1
 django-crispy-forms==2.3
 export==0.2.1
 flake8==7.1.1
+gunicorn==23.0.0
+h11==0.14.0
 mccabe==0.7.0
 numpy==2.1.1
 packaging==24.1
@@ -20,4 +24,5 @@ sqlparse==0.5.1
 tenacity==9.0.0
 typing_extensions==4.12.2
 tzdata==2024.1
+uvicorn==0.30.6
 whitenoise==6.7.0
